# P4E

./: .gitignore
ClionProjects/C Programming/: ArithOp.c  CMakeLists.txt  CallByReference.c  FileModes.c  FunctionPtr.c  Goto.c  Loops.c  Pointer.c  Practice.c  PreDefineMacros.c  Preprocessor.c  Recursion.c  String.c  StringFunc.c  StructureInC.c  call_back_func.c  dynamic_memory.c  file_handling.c  inclFile.c  myfile.txt  null_ptr.c  storage_classes.c
ClionProjects/C++_Programming/: Loops.cpp  Main.cpp  MemoryArray.cpp  NestFunc.cpp  Pointer.cpp  Recursion.cpp  SelControlStruct.cpp  StructUni.cpp  Variables.cpp  array_of_object.cpp  arrays_ptr.cpp  break_continue.cpp  callByValueReference.cpp  function.cpp  tempCodeRunnerFile.cpp  var_typecast.cpp
ClionProjects/C_Projects/: CMakeLists.txt  Exercise1.c  Exercise10.c  Exercise12.c  Exercise13.c  Exercise14.c  Exercise2.c  Exercise5.c  Exercise6.c  Exercise7.c  Exercise9.c  genBill.txt
ClionProjects/Data Structure/: ArrayADT.c  Main.c  array_operation.c  binary_search_tree.c  bubble_sort.c  circularLinkedList.c  circularQueue.c  deQueue.c  doubly_linked_list.c  infix_to_postfix.c  insertion_sort.c  linked_list_del.c  merge_sort.c  paranthesis_matching.c  queue.c  queue_linkedlist.c  quick_sort.c  selection_sort.c  stackArrayImp.c  stackArrayOp.c  stack_linked_list.c  tempCodeRunnerFile.c
PycharmProjects/: Pipfile
PycharmProjects/py4e-problems/: Pattern.py  Regex.txt  age100.py  apple.py  f_calc.py  fake_tables.py  find_palindrome.py  find_palindrome2.py  fun_names.py  guess_num.py  guess_num2_player.py  my_dict.py  (+8 more)
(+347 files in other folders)
