cmake_minimum_required(VERSION 3.19)
project(C_Programming__CWH_ C)

set(CMAKE_C_STANDARD 11)

add_executable(C_Programming__CWH_
        ArithOp.c
        ArrayAsArgs.c
        ArrayPtr.c
        CallBackFunc.c
        CallByReference.c
        CmdLineUtility.c
        DanglingPtr.c
        DynMemory.c
        Escape.c
        FileHandling.c
        FileModes.c
        FunctionPtr.c
        Functions.c
        Goto.c
        IfElse.c
        inclFile.c
        Loops.c
        NullPtr.c
        Pointer.c
        Practice.c
        PreDefineMacros.c
        Preprocessor.c
        Recursion.c
        StorageClasses.c
        String.c
        StringFunc.c
        StructureInC.c
        Switch.c
        TypeDef.c
        Union.c
        VoidPtr.c)
