cmake_minimum_required(VERSION 3.19)
project(C_Projects C)

set(CMAKE_C_STANDARD 11)

add_executable(C_Projects
        Exercise1.c
        Exercise10.c
        Exercise11.c
        Exercise12.c
        Exercise13.c
        Exercise14.c
        Exercise2.c
        Exercise3.c
        Exercise4.c
        Exercise5.c
        Exercise6.c
        Exercise7.c
        Exercise8.c
        Exercise9.c)
